fix style top align

--- a/blocks/strategic-card-items/strategic-card-items.css
+++ b/blocks/strategic-card-items/strategic-card-items.css
@@ -17,7 +17,7 @@
     display: flex;
     flex: 1;
     width: min(calc(173/var(--breakpoint-pc)*100vw),173px);
-    height: auto;
+    height: stretch;
     padding: var(--size-24) var(--size-24) var(--size-32) var(--size-24);
     flex-direction: column;
     align-items: center;
@@ -40,7 +40,6 @@
     }
 
     .card-text {
-      flex: 1;
       color: var(--color-primary-grey-90);
       text-align: center;
       font-size: var(--size-16);
